--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--Master Dimensions-->
+    <dimen name="elementDefaultMargin">16dp</dimen>
 
     <!--Main Activity Dimensions-->
-    <dimen name="cardViewDefaultMargin">16dp</dimen>
-    <dimen name="cardViewDefaultPadding">16dp</dimen>
-
+    <dimen name="cardViewDefaultMargin">@dimen/elementDefaultMargin</dimen>
+    <dimen name="cardViewDefaultPadding">12dp</dimen>
+    <dimen name="cardViewCornerRadius">16dp</dimen>
+    <dimen name="cardViewElevation">4dp</dimen>
+    <dimen name="fabMargin">15dp</dimen>
 </resources>
