--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="bottom"
-                        android:text="Justin Loh"
+                        android:text="User Name"
                         android:textSize="25sp"
                         android:textColor="@color/colorWhite"/>
                     <TextView
@@ -61,18 +61,26 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="top"
-                        android:text="A rather gay chem teacher in HCI."
+                        android:text="Lorem ipsum dolor sit amet."
                         android:textColor="@color/colorWhite"/>
                 </LinearLayout>
             </RelativeLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <com.connite.ExpandableHeightListView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cv_UserHeaderCard"
-        android:layout_margin="@dimen/elementDefaultMargin"/>
+        android:layout_height="match_parent">
+
+        <com.connite.ExpandableHeightListView
+            android:id="@+id/ehlv_ActivityItemList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/elementDefaultMargin"
+            android:layout_marginLeft="@dimen/elementDefaultMargin"
+            android:paddingTop="120dp"/>
+
+    </ScrollView>
 
     <!--Floating Action Button-->
     <ImageButton
@@ -85,6 +93,6 @@
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:src="@mipmap/fab"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:elevation="2dp"
         android:onClick="startSuggestionsActivity"/>
 </RelativeLayout>
