--- a/app/src/main/res/layout/fragment_activity_item.xml
+++ b/app/src/main/res/layout/fragment_activity_item.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/cardViewCornerRadius"
-    app:contentPadding="@dimen/cardViewDefaultPadding"
     app:cardElevation="@dimen/cardViewElevation"
     app:cardBackgroundColor="@color/colorAccent">
 
@@ -20,27 +19,68 @@
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:layout_weight="0.5"
-            android:background="@color/colorBlack"/>
+            android:src="@mipmap/avatar"
+            android:background="@drawable/background_activity_item_image"/>
 
         <RelativeLayout
             android:id="@+id/rl_ActivityItemSidebarContainer"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.5"
-            android:background="@color/colorPrimary">
+            android:layout_margin="@dimen/cardViewDefaultPadding"
+            android:paddingLeft="@dimen/cardViewDefaultPadding"
+            android:paddingRight="@dimen/cardViewDefaultPadding"
+            android:paddingTop="@dimen/cardViewDefaultPadding"
+            android:background="@color/colorWhite">
 
             <TextView
                 android:id="@+id/tv_ActivityName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Activity Name"/>
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:text="Activity Name"
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/tv_ActivityDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_ActivityName"
+                android:textColor="@color/colorBlack"
                 android:text="Activity Description"/>
+
+            <LinearLayout
+                android:id="@+id/ll_ActivityItemLocationContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_ActivityDescription">
+
+                <ImageView
+                    android:id="@+id/iv_ActivityItemLocationIcon"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_launcher_background"/>
+
+                <TextView
+                    android:id="@+id/tv_ActivityNamedLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="4dp"
+                    android:text="Activity Location"
+                    android:textColor="@color/colorBlack"
+                    android:gravity="center_vertical"/>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_NavigateActivity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:text="Navigate"/>
 
         </RelativeLayout>
 
