--- a/app/src/main/res/layout/list_activity_item.xml
+++ b/app/src/main/res/layout/list_activity_item.xml
@@ -3,17 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/cardViewDefaultPadding">
-
+    android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
         android:id="@+id/cv_ActivityItemCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/elementDefaultMargin"
-        app:cardBackgroundColor="@color/colorLightBlue"
-        app:cardCornerRadius="@dimen/cardViewCornerRadius"
-        app:cardElevation="@dimen/cardViewElevation">
+        android:layout_marginTop="@dimen/elementDefaultMargin"
+        android:layout_marginStart="@dimen/cardViewDoubleMargin"
+        android:layout_marginEnd="@dimen/cardViewDoubleMargin"
+        app:cardBackgroundColor="@color/colorAccent"
+        app:cardCornerRadius="@dimen/cardViewCornerRadius">
 
         <LinearLayout
             android:id="@+id/ll_ActivityItemBodyContainer"
