Corrected Fab Background, altered cardview margins to 10dp as default

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,8 +92,8 @@
 
     <!--Floating Action Button-->
     <ImageButton
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="@dimen/fabMargin"
@@ -101,6 +101,6 @@
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:src="@mipmap/fab"
-        android:elevation="2dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:onClick="startSuggestionsActivity"/>
 </RelativeLayout>
