--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,65 +9,73 @@
     tools:context=".MainActivity">
 
     <!--User Header CardView-->
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_UserHeaderCard"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="88dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="@dimen/cardViewDefaultMargin"
         android:layout_marginLeft="@dimen/cardViewDefaultMargin"
         android:layout_marginRight="@dimen/cardViewDefaultMargin"
-        android:onClick="startUserInfoActivity"
-        app:cardElevation="@dimen/cardViewElevation"
-        app:cardCornerRadius="@dimen/cardViewCornerRadius">
-        <LinearLayout
-            android:id="@+id/ll_UserHeaderContainer"
+        android:elevation="@dimen/cardViewElevation"
+        android:outlineProvider="none">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_UserHeaderCard"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="@mipmap/ic_user_header_background"
-            android:padding="@dimen/cardViewDefaultPadding">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/civ_UserProfileImage"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_marginEnd="@dimen/cardViewDefaultPadding"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/avatar"
-                app:civ_border_width="2dp"
-                app:civ_border_color="@color/colorWhite" />
-            <RelativeLayout
-                android:id="@+id/rl_UserHeaderTextContainer"
+            android:layout_height="88dp"
+            android:onClick="startUserInfoActivity"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="@dimen/cardViewCornerRadius">
+            <LinearLayout
+                android:id="@+id/ll_UserHeaderContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:id="@+id/ll_UserHeaderTextInnerContainer"
+                android:layout_gravity="center"
+                android:background="@mipmap/ic_user_header_background"
+                android:padding="@dimen/cardViewDefaultPadding">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/civ_UserProfileImage"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginEnd="@dimen/cardViewDefaultPadding"
+                    android:layout_gravity="center_vertical"
+                    android:src="@mipmap/avatar"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="@color/colorWhite" />
+                <RelativeLayout
+                    android:id="@+id/rl_UserHeaderTextContainer"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
                     android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/tv_UserName"
+                    <LinearLayout
+                        android:id="@+id/ll_UserHeaderTextInnerContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="bottom"
-                        android:text="Justin Loh"
-                        android:textSize="30sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorWhite"/>
-                    <TextView
-                        android:id="@+id/tv_UserSub"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="top"
-                        android:text="A rather mildly gay chem teacher."
-                        android:textColor="@color/colorWhite"/>
-                </LinearLayout>
-            </RelativeLayout>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+                        android:layout_centerVertical="true"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/tv_UserName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom"
+                            android:text="Justin Loh"
+                            android:textSize="30sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorWhite"/>
+                        <TextView
+                            android:id="@+id/tv_UserSub"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="top"
+                            android:text="A rather mildly gay chem teacher."
+                            android:textColor="@color/colorWhite"/>
+                    </LinearLayout>
+                </RelativeLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </RelativeLayout>
 
     <View
         android:id="@+id/v_userHeaderScrollHide"
