Fixed imageview not working in list items. Changed listitem padding so that there is a gap between the last item and screen.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,6 +109,6 @@
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:src="@mipmap/fab"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:background="@null"
         android:onClick="startSuggestionsActivity"/>
 </RelativeLayout>
