--- a/app/src/main/res/layout/list_activity_item.xml
+++ b/app/src/main/res/layout/list_activity_item.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/cardViewDefaultPadding">
     <android.support.v7.widget.CardView
         android:id="@+id/cv_ActivityItemCard"
         android:layout_width="match_parent"
@@ -18,15 +19,17 @@
         <LinearLayout
             android:id="@+id/ll_ActivityItemBodyContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <ImageView
+                android:scaleType="centerCrop"
                 android:id="@+id/iv_ActivityItemImage"
                 android:layout_width="0dp"
                 android:layout_height="256dp"
                 android:layout_weight="0.5"
-                android:src="@mipmap/avatar"
-                android:background="@drawable/background_activity_item_image"/>
+                android:background="@mipmap/avatar"
+                />
 
             <RelativeLayout
                 android:id="@+id/rl_ActivityItemSidebarContainer"
