--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,11 +75,22 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+        <!--Shadow CardView-->
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="88dp"
+            android:layout_marginTop="5dp"
+            app:cardElevation="-1dp"
+            app:cardBackgroundColor="@color/colorShadowGray"
+            app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"/>
+
     </RelativeLayout>
 
     <View
         android:id="@+id/v_userHeaderScrollHide"
         android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_height="88dp"
         android:background="@color/colorTransparent"/>
 
