--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="userHeaderBackground">#4254F4</color>
     <color name="colorTransparent">@android:color/transparent</color>
     <color name="colorLightBlue">#E5F4FB</color>
+    <color name="colorShadowGray">#E7E5E6</color>
 </resources>
