--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="cardViewDefaultPadding">12dp</dimen>
     <dimen name="cardViewDoubleMargin">20dp</dimen>
     <dimen name="cardViewCornerRadius">16dp</dimen>
+    <dimen name="cardViewShadowCornerRadius">14dp</dimen>
     <dimen name="cardViewElevation">4dp</dimen>
     <dimen name="fabMargin">15dp</dimen>
 </resources>
