Added two mipmaps for testing imageview in cardview

--- a/app/src/main/res/layout/list_activity_item.xml
+++ b/app/src/main/res/layout/list_activity_item.xml
@@ -28,7 +28,8 @@
                 android:layout_width="0dp"
                 android:layout_height="256dp"
                 android:layout_weight="0.5"
-                android:background="@mipmap/avatar"
+                android:background="@mipmap/tenki"
+                android:src="@mipmap/chika"
                 />
 
             <RelativeLayout
