--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="none"
         android:layout_below="@id/v_userHeaderScrollHide">
 
         <com.connite.ExpandableHeightListView
@@ -105,7 +106,8 @@
             android:layout_height="wrap_content"
             android:divider="@null"
             android:dividerHeight="0dp"
-            android:paddingTop="@dimen/elementDefaultMargin"/>
+            android:scrollbars="none"
+            android:paddingTop="@dimen/cardViewLargePadding"/>
 
     </ScrollView>
 
