--- a/app/src/main/res/layout/list_activity_item.xml
+++ b/app/src/main/res/layout/list_activity_item.xml
@@ -10,12 +10,12 @@
     android:paddingBottom="@dimen/cardViewDefaultPadding">
 
     <android.support.v7.widget.CardView
+        app:cardElevation="0dp"
         android:id="@+id/cv_ActivityItemCard"
         android:layout_width="match_parent"
         android:layout_height="256dp"
         app:cardBackgroundColor="@color/colorLightBlue"
-        app:cardCornerRadius="@dimen/cardViewCornerRadius"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="@dimen/cardViewCornerRadius">
 
 
 
@@ -25,15 +25,20 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <ImageView
-                android:scaleType="centerCrop"
-                android:id="@+id/iv_ActivityItemImage"
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="256dp"
+                android:layout_height="match_parent"
                 android:layout_weight="0.5"
-                android:background="@mipmap/tenki"
-                android:src="@mipmap/chika"
-                />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:scaleType="centerCrop"
+                    android:id="@+id/iv_ActivityItemImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    />
+
+            </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/rl_ActivityItemSidebarContainer"
