--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_MainActivityParent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/cardViewDefaultMargin"
         android:layout_marginLeft="@dimen/cardViewDefaultMargin"
+        android:layout_marginTop="@dimen/cardViewDefaultMargin"
         android:layout_marginRight="@dimen/cardViewDefaultMargin"
         android:elevation="@dimen/cardViewElevation"
         android:outlineProvider="none">
@@ -22,10 +21,11 @@
         <android.support.v7.widget.CardView
             android:id="@+id/cv_UserHeaderCard"
             android:layout_width="match_parent"
-            android:layout_height="88dp"
+            android:layout_height="@dimen/userHeaderHeight"
             android:onClick="startUserInfoActivity"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="@dimen/cardViewCornerRadius">
+            app:cardCornerRadius="@dimen/cardViewCornerRadius"
+            app:cardElevation="0dp">
+
             <LinearLayout
                 android:id="@+id/ll_UserHeaderContainer"
                 android:layout_width="match_parent"
@@ -33,43 +33,49 @@
                 android:layout_gravity="center"
                 android:background="@mipmap/ic_user_header_background"
                 android:padding="@dimen/cardViewDefaultPadding">
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/civ_UserProfileImage"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:layout_marginEnd="@dimen/cardViewDefaultPadding"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/cardViewDefaultPadding"
                     android:src="@mipmap/avatar"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="@color/colorWhite" />
+                    app:civ_border_color="@color/colorWhite"
+                    app:civ_border_width="2dp" />
+
                 <RelativeLayout
                     android:id="@+id/rl_UserHeaderTextContainer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical"
                     android:orientation="vertical">
+
                     <LinearLayout
                         android:id="@+id/ll_UserHeaderTextInnerContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:orientation="vertical">
+
                         <TextView
                             android:id="@+id/tv_UserName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="bottom"
                             android:text="Justin Loh"
-                            android:textSize="30sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/colorWhite"/>
+                            android:textColor="@color/colorWhite"
+                            android:textSize="25sp"
+                            android:textStyle="bold" />
+
                         <TextView
                             android:id="@+id/tv_UserSub"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="top"
-                            android:text="A rather mildly gay chem teacher."
-                            android:textColor="@color/colorWhite"/>
+                            android:text="Lorem ipsum dolor sit amet."
+                            android:textColor="@color/colorWhite"
+                            android:textSize="20sp" />
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
@@ -79,26 +85,26 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="88dp"
+            android:layout_height="@dimen/userHeaderHeight"
             android:layout_marginTop="5dp"
-            app:cardElevation="-1dp"
             app:cardBackgroundColor="@color/colorShadowGray"
-            app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"/>
+            app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"
+            app:cardElevation="-1dp" />
 
     </RelativeLayout>
 
     <View
         android:id="@+id/v_userHeaderScrollHide"
         android:layout_width="match_parent"
+        android:layout_height="@dimen/userHeaderHeight"
         android:layout_alignParentTop="true"
-        android:layout_height="88dp"
-        android:background="@color/colorTransparent"/>
+        android:background="@color/colorTransparent" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:layout_below="@id/v_userHeaderScrollHide">
+        android:layout_below="@id/v_userHeaderScrollHide"
+        android:scrollbars="none">
 
         <com.connite.ExpandableHeightListView
             android:id="@+id/ehlv_ActivityItemList"
@@ -106,8 +112,8 @@
             android:layout_height="wrap_content"
             android:divider="@null"
             android:dividerHeight="0dp"
-            android:scrollbars="none"
-            android:paddingTop="@dimen/cardViewLargePadding"/>
+            android:paddingTop="@dimen/cardViewLargePadding"
+            android:scrollbars="none" />
 
     </ScrollView>
 
@@ -119,9 +125,9 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="@dimen/fabMargin"
         android:layout_marginBottom="@dimen/fabMargin"
-        android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:src="@mipmap/fab"
         android:background="@null"
-        android:onClick="startSuggestionsActivity"/>
+        android:onClick="startSuggestionsActivity"
+        android:scaleType="fitCenter"
+        android:src="@mipmap/fab" />
 </RelativeLayout>
