--- a/app/src/main/res/layout/list_activity_item.xml
+++ b/app/src/main/res/layout/list_activity_item.xml
@@ -123,7 +123,7 @@
     <!--Shadow CardView-->
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="256dp"
+        android:layout_height="@dimen/activityItemHeight"
         android:layout_marginTop="5dp"
         app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"
         app:cardElevation="-1dp"
