--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -1,9 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl_UserInfoActivityContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserInfoActivity">
+    android:onClick="closeUserInfoActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="@dimen/cardViewDefaultMargin"
+        android:layout_marginTop="@dimen/cardViewDefaultMargin"
+        android:layout_marginRight="@dimen/cardViewDefaultMargin"
+        android:elevation="@dimen/cardViewElevation"
+        android:outlineProvider="none">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_UserInfoHeaderCard"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/userHeaderHeight"
+            android:onClick="closeUserInfoActivity"
+            app:cardCornerRadius="@dimen/cardViewCornerRadius"
+            app:cardElevation="0dp">
+
+            <LinearLayout
+                android:id="@+id/ll_UserInfoHeaderContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@mipmap/ic_user_header_background"
+                android:padding="@dimen/cardViewDefaultPadding">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/civ_UserInfoProfileImage"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/cardViewDefaultPadding"
+                    android:src="@mipmap/avatar"
+                    app:civ_border_color="@color/colorWhite"
+                    app:civ_border_width="2dp" />
+
+                <RelativeLayout
+                    android:id="@+id/rl_UserHeaderTextContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/ll_UserHeaderTextInnerContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_UserName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom"
+                            android:text="Justin Loh"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="25sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_UserSub"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="top"
+                            android:text="Lorem ipsum dolor sit amet."
+                            android:textColor="@color/colorWhite"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+                </RelativeLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--Shadow CardView-->
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/userHeaderHeight"
+            android:layout_marginTop="5dp"
+            app:cardBackgroundColor="@color/colorShadowGray"
+            app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"
+            app:cardElevation="-1dp" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
