Added navbar to UserInfoActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorLightBlue">#E5F4FB</color>
     <color name="colorShadowGray">#E7E5E6</color>
     <color name="colorLightGray">#9EA8AA</color>
+    <color name="colorCyan">#96D8D7</color>
 </resources>
