--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -7,6 +7,7 @@
     android:onClick="closeUserInfoActivity">
 
     <RelativeLayout
+        android:id="@+id/rl_UserInfoHeaderContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -88,6 +89,126 @@
             app:cardBackgroundColor="@color/colorShadowGray"
             app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"
             app:cardElevation="-1dp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_UserInfoNavbarContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl_UserInfoHeaderContainer"
+        android:layout_margin="@dimen/cardViewDoubleMargin">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="@dimen/userInfoNavbarWidth"
+            android:layout_height="@dimen/userInfoNavbarHeight"
+            app:cardCornerRadius="@dimen/cardViewCornerRadius"
+            app:cardElevation="0dp"
+            app:cardBackgroundColor="@color/colorCyan">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="@dimen/cardViewDefaultPadding">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginEnd="@dimen/cardViewDefaultPadding"
+                        android:src="@drawable/ic_home_white_24dp"
+                        android:scaleType="fitCenter"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/colorWhite"
+                        android:textStyle="bold"
+                        android:textSize="25sp"
+                        android:text="Home"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:onClick="startConnectActivity">
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginEnd="@dimen/cardViewDefaultPadding"
+                        android:src="@drawable/ic_people_white_24dp"
+                        android:scaleType="fitCenter"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/colorWhite"
+                        android:textStyle="bold"
+                        android:textSize="25sp"
+                        android:text="Connect"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:onClick="startPastActivitiesActivity">
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginEnd="@dimen/cardViewDefaultPadding"
+                        android:src="@drawable/ic_access_time_white_24dp"
+                        android:scaleType="fitCenter"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/colorWhite"
+                        android:textStyle="bold"
+                        android:textSize="25sp"
+                        android:text="Past"/>
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="5dp"
+                    android:layout_marginTop="@dimen/cardViewDefaultPadding"
+                    android:background="@color/colorWhite"/>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="64dp"
+                    android:layout_marginTop="@dimen/cardViewDefaultPadding"
+                    android:src="@drawable/ic_settings_white_24dp"
+                    android:onClick="startSettingsActivity"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="@dimen/userInfoNavbarWidth"
+            android:layout_height="@dimen/userInfoNavbarHeight"
+            android:layout_marginTop="5dp"
+            app:cardElevation="-1dp"
+            app:cardBackgroundColor="@color/colorShadowGray"
+            app:cardCornerRadius="@dimen/cardViewShadowCornerRadius"/>
 
     </RelativeLayout>
 
